anna (0.044) UNRELEASED; urgency=low

  * Peter Mann
    - Initial Slovak translation (sk.po).
  * Kęstutis Biliūnas
    - Updated Lithuanian translation.
  * Matt Kraai
    - Make the menu entry for load-installer translatable.
  * André Luís Lopes
    - Run debconf-updatepo to feed one additionnal template to translators.
    - Updatept_BR (Brazilian Portuguese) translation.

 -- Joey Hess <joeyh@debian.org>  Tue,  4 Nov 2003 23:46:57 -0500

anna (0.043) unstable; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Kęstutis Biliūnas
    - Update Lithuanian translation.
  * Miroslav Kure
    - Update Czech (cs.po) translation.
  * Christian Perrier
    - Update French translation.
  * Ilgiz Kalmetev
    - Updated Russian translation. Closes: #219094.
  * Petter Reinholdtsen
    - Updated Norwegian Bokmål (nb.po).
  * Tommi Vainikainen
    - Updated Finnish translation.
  * Joey Hess
    - Mark the "no modules" error as unseen before display to handle repeat
      displays.

 -- Joey Hess <joeyh@debian.org>  Tue,  4 Nov 2003 23:36:57 -0500

anna (0.042) unstable; urgency=low

  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Bart Cornelis
    - update dutch translation (nl.po)
  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Joey Hess
    - Make udeb_includes take effect after priority checking, so it serves
      as an override.
    - Rewrote the udeb_include and udeb_exclude handlers to not use
      di_packages_get_package to look up a package. since it seemed to never
      find a package. Don't know why.

 -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 15:56:24 -0500

anna (0.041) unstable; urgency=low

  * A retreiver to use can be specified on the command line to override
    the automatic/manual selection of a retreiver.
  * Remove anna from the main menu. Instead retrivers and/or customized menu
    item packages will provide menu items customised for the install media.