@@ -9,6 +9,8 @@ anna (0.044) UNRELEASED; urgency=low
   * André Luís Lopes
     - Run debconf-updatepo to feed one additionnal template to translators.
     - Updatept_BR (Brazilian Portuguese) translation.
+  * Jeremie Koenig
+    - Escape commas in package descriptions. (Closes: #219889)
 
  -- Joey Hess <joeyh@debian.org>  Tue,  4 Nov 2003 23:46:57 -0500
 
